tooling/nargo_cli/tests/snapshots/execution_success/comptime_println/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
hello from compile-time!
quote {
    struct Foo {
        fn foo() {
            // Some comment
            [[1, 2, 3]]
        }
    }
    
}
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
0x03
